--- a/day 7_Zomato/style.css
+++ b/day 7_Zomato/style.css
@@ -22,30 +22,8 @@ section{
     margin: 4rem 0;
 }
 
-.navbar{
-    position: sticky;
-    top:0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #f9fafc;
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-      0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    z-index: 9999;
-}
-.navbar_brand{
-    width:100px;
-}
-.mobile_navbar_items {
-    background-color: #f9fafc;
-    padding: 1rem;
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-      0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    z-index: 9999;
-  }
-  .hide_mobile {
-    display: none !important;
-  }
+/* Custom */
+  
   .container {
     width: 100%;
     padding-right: 15px;
@@ -53,9 +31,51 @@ section{
     margin-right: auto;
     margin-left: auto;
   }
-   .button_primary {
+  
+  .hide_mobile {
+    display: none !important;
+  }
+  
+  .navbar {
+    position: sticky;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f9fafc;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+      0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    z-index: 9999;
+  }
+  .navbar_brand {
+    width: 100px;
+  }
+  .mobile_navbar_items {
+    background-color: #f9fafc;
+    padding: 1rem;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+      0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    z-index: 9999;
+  }
+  
+  .hamburger_menu > div {
+    width: 35px;
+    height: 5px;
+    background-color: #f9fafc;
+    margin: 6px 0;
+  }
+  
+  .hamburger_menu_close {
+    display: none !important;
+  }
+  
+  .mobile_navbar_items > ul > li {
+    margin: 20px 0;
+  }
+  
+  .button_primary {
     background-image: linear-gradient(
-      to left,
+      to right,
       #ff512f 0%,
       #dd2476 51%,
       #ff512f 100%
@@ -74,27 +94,22 @@ section{
     border-radius: 4px;
     display: block;
   }
-  .hamburger_menu > div {
-    width: 35px;
-    height: 5px;
-    background-color: #f9fafc;
-    margin: 6px 0;
-  }
   
-  .hamburger_menu_close {
-    display: none !important;
-  }
-  
-  .mobile_navbar_items > ul > li {
-    margin: 20px 0;
-  }
-   .button_primary:hover {
+  .button_primary:hover {
     background-position: right center; /* change the direction of the change here */
     color: #fff;
     text-decoration: none;
   }
-
-.hero_image_container {
+  
+  .brand_logo {
+    width: 100%;
+  }
+  
+  .hero_container {
+    margin-top: 1rem;
+  }
+  
+  .hero_image_container {
     position: relative;
     width: 100%;
   }
@@ -120,6 +135,7 @@ section{
     color: #1d3557;
     font-weight: 900;
   }
+  
   .video_footage_container {
     margin-top: 3rem;
     display: flex;
@@ -132,6 +148,7 @@ section{
   .video_footage {
     position: relative;
   }
+  
   .video_footage::before {
     background-image: linear-gradient(
       to right,
@@ -156,6 +173,7 @@ section{
     font-weight: 300;
     text-align: center;
   }
+  
 
   @media (min-width: 768px){
     .hide_mobile {
