--- a/day 7_Zomato/style.css
+++ b/day 7_Zomato/style.css
@@ -9,20 +9,22 @@ body {
     overflow-x: hidden;
     transition: 0.5s;
 }
-ul{
-    list-style: none;
+ul {
+    list-style-type: none;
     margin: 0;
     padding: 0;
-}
-button{
+  }
+  
+  button {
     border: none;
     cursor: pointer;
-}
-section{
+  }
+  
+  section {
     margin: 4rem 0;
-}
-
-/* Custom */
+  }
+  
+  /* Custom */
   
   .container {
     width: 100%;
@@ -174,8 +176,176 @@ section{
     text-align: center;
   }
   
-
-  @media (min-width: 768px){
+  .food_list_container {
+    margin-top: 3rem;
+    text-align: center;
+  }
+  
+  .text-lg {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    color: #1d3557;
+    font-weight: 900;
+  }
+  .text-xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    color: #1d3557;
+    font-weight: 900;
+  }
+  
+  .food_menu_card_list {
+    width: 100%;
+  }
+  .food_menu_card {
+    margin-top: 1rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 100%;
+  }
+  .food_menu_card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  .food_menu_card_image {
+    border-radius: 6px 6px 0 0;
+    width: 100%;
+  }
+  .food_menu_card_details {
+    padding: 1rem;
+    text-align: left;
+    color: #1d3557;
+  }
+  
+  .food_list_view_more {
+    margin: 2rem 0;
+    transition: 0.3s;
+    color: #fff;
+    padding: 1rem;
+    border-radius: 6px;
+    background: linear-gradient(to right, #ff512f 0%, #dd2476 51%, #ff512f 100%);
+  }
+  
+  .restaurant_list_text {
+    margin: 1rem 0;
+  }
+  
+  .restaurant_list_container {
+    margin-top: 3rem;
+  }
+  
+  .restaurant_list_row_1 {
+    display: flex;
+    align-items: baseline;
+  }
+  .restaurant_list_row_2 {
+    margin-top: 10px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row-reverse;
+  }
+  .restaurant2,
+  .restaurant4 {
+    border-radius: 4px;
+    margin: 0 5px;
+    width: 200px;
+    height: 100px;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+      0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  }
+  .restaurant1,
+  .restaurant3 {
+    border-radius: 4px;
+    margin: 0 5px;
+    width: 150px;
+    height: 80px;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+      0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  }
+  
+  .email_subcribe_container {
+    margin-top: 3rem;
+    width: 100%;
+    padding: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  .email_subcribe_input_field {
+    display: flex;
+    align-items: center;
+  }
+  
+  .email_input {
+    border: 1px solid #ee89a0;
+    background-color: #fcedf0;
+    color: #1d3557;
+    font-weight: 700;
+    padding: 0.5rem;
+    border-radius: 4px;
+  }
+  
+  .email_input::placeholder {
+    color: #bdbcbc;
+  }
+  
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 1rem 1rem 0 0;
+    background-image: linear-gradient(
+      to right,
+      #ff512f 0%,
+      #dd2476 51%,
+      #ff512f 100%
+    );
+  }
+  
+  footer > img {
+    width: 300px;
+    filter: brightness(0) invert(1);
+  }
+  
+  footer > ul {
+    margin-top: -1rem;
+    color: #fff;
+  }
+  
+  footer > ul > li {
+    margin: 5px 0;
+  }
+  
+  .quote_container {
+    position: relative;
+    margin-top: 4rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 200px;
+    width: 100%;
+    border-radius: 13px;
+    background: url("https://images.unsplash.com/photo-1522336572468-97b06e8ef143?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=755&q=80")
+      center center / cover no-repeat;
+  }
+  .quote_image_overlay {
+    position: absolute;
+    height: 200px;
+    width: 100%;
+    border-radius: 13px;
+    background-color: #0a4065;
+    opacity: 49%;
+  }
+  .quote_image_text {
+    color: #fff;
+    z-index: 3;
+    margin: 0 1rem;
+    text-align: center;
+  }
+  
+  @media (min-width: 768px) {
     .hide_mobile {
       display: block !important;
     }
@@ -196,4 +366,167 @@ section{
       font-size: 1.875rem;
       line-height: 2.25rem;
     }
+    .food_list_container {
+      position: relative;
+      margin: 5rem 0;
+    }
+    .food_list_container_diagonal {
+      left: 0px;
+      position: absolute;
+      top: 0px;
+  
+      height: 100%;
+      width: 100%;
+  
+      transform: skewY(-5deg);
+  
+      background-image: linear-gradient(
+        to right,
+        #ff512f 0%,
+        #dd2476 51%,
+        #ff512f 100%
+      );
+      z-index: -3;
+    }
+  
+    .food_menu_card_list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      padding-top: 2rem;
+    }
+    .food_menu_card {
+      flex-basis: 30%;
+      background-color: #fff;
+      border-radius: 6px;
+    }
+  
+    .food_menu_card_move_up {
+      margin-top: -1rem;
+      margin-bottom: 1rem;
+    }
+  
+    .food_list_view_more {
+      background: none;
+    }
+  
+    .video_footage_container {
+      margin-bottom: 5rem;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  
+    .video_footage {
+      margin-right: 2rem;
+    }
+    .video_footage_text {
+      margin-left: 2rem;
+    }
+  
+    .restaurant_list_container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  
+    .restaurant_list_row_1 {
+      justify-content: center;
+    }
+    .restaurant_list_row_2 {
+      margin-top: 3px;
+      align-items: flex-start;
+      justify-content: center;
+    }
+    .email_subcribe_container {
+      display: flex;
+  
+      justify-content: center;
+    }
+    .email_input {
+      width: 20rem;
+    }
+  
+    .quote_container {
+      height: 300px;
+      width: 100%;
+    }
+    .quote_image_overlay {
+      position: absolute;
+      height: 300px;
+      width: 100%;
+      border-radius: 13px;
+      background-color: #0a4065;
+      opacity: 49%;
+    }
+    .quote_image_text {
+      color: #fff;
+      z-index: 3;
+      margin: 0 1rem;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 500;
+      line-height: 1.2;
+    }
+    footer {
+      margin-top: 3rem;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+    }
   }
+  
+  @media (min-width: 1200px) {
+    .container {
+      max-width: 1140px;
+    }
+    .navbar {
+      padding: 0 3rem;
+    }
+    .button_primary {
+      padding: 1rem 2rem;
+      font-size: 1rem;
+    }
+  
+    .hero_text {
+      font-size: 3rem;
+      line-height: 1;
+    }
+    .text-xl {
+      font-size: 3rem;
+      line-height: 1;
+    }
+  
+    .video_footage_container {
+      display: flex;
+      flex-direction: column;
+    }
+    .video_footage_text {
+      width: 60%;
+    }
+  
+    .food_menu_card_list {
+      margin-top: 2rem;
+    }
+    .food_list_view_more {
+      margin-top: 4rem;
+      cursor: pointer;
+    }
+    .food_list_view_more:hover {
+      background: #fff;
+      color: #dd2476;
+      margin: 4rem 20rem;
+      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+    }
+    .restaurant2,
+    .restaurant4 {
+      width: 300px;
+      height: 260px;
+    }
+    .restaurant1,
+    .restaurant3 {
+      width: 250px;
+      height: 180px;
+    }
+  }
+  
